--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="hero-container bg-color">
                 <div>
                     <p>Bangladesh 2.0</p>
-                    <h1  class="font-color-black">Idea , innovation ,
+                    <h1  class="font">Idea , innovation ,
                         vision and challenges in New Bangladesh.</h1>
                     <div>
                         <button class="all-font"><a href="">Explore New Bangladesh</a></button>
