--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bangladesh 2.0 </title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="styles/styles.css">
+
+    <link rel="stylesheet" href="styles/styles.css">
+
 </head>
 <body class="all-font bg-color-grey">
     <nav>
@@ -62,15 +61,15 @@
                     </div>
                 </div>
                 <div class="bg-color-white yunus-section">
-                    <p class="yonus-description"><br>Yunus belongs to a Muslim family and continues to actively display a normative orthodox Sunnite theological creed. He encourages the public to engage in Dua directly to Allah,[139][140] whom Yunus publicly recognises as the supreme source of assistance and support,[141] and as the master of Divine Decree.[142] Yunus's brother Muhammad Ibrahim is a former professor of physics at the University of Dhaka and the founder of The Center for Mass Education in Science (CMES), which brings science education to adolescent girls in villages.[145] His other brother Muhammad Jahangir (d. 2019) was a television presenter and a social activist in Bangladesh</p>
+                    <p class="yunus-description"><br>Yunus belongs to a Muslim family and continues to actively display a normative orthodox Sunnite theological creed. He encourages the public to engage in Dua directly to Allah,[139][140] whom Yunus publicly recognises as the supreme source of assistance and support,[141] and as the master of Divine Decree.[142] Yunus's brother Muhammad Ibrahim is a former professor of physics at the University of Dhaka and the founder of The Center for Mass Education in Science (CMES), which brings science education to adolescent girls in villages.[145] His other brother Muhammad Jahangir (d. 2019) was a television presenter and a social activist in Bangladesh</p>
                     
-                    <p class="yonus-designation"><strong>Dr. Muhammad Yunus</strong><br>Chief Adviser of the People's Republic of Bangladesh</p>
+                    <p class="yunus-designation"><strong>Dr. Muhammad Yunus</strong><br>Chief Adviser of the People's Republic of Bangladesh</p>
                 </div>
             </div>
         </section>
-        <section class="opinion">
+        <!-- <section class="opinion">
 
-        </section>
+        </section> -->
         <section class="news">
             <div class="news-section">
                 <h2 class="section-title font-color-black">Recent News</h2>
@@ -105,10 +104,10 @@
     </main>
     <footer class="donate">
         <div><h2 class="section-title font-color-black">Donate Today</h2>
-        <p class="section-description">
-            Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure.
-        </p>
-    </div>
+            <p class="section-description">
+                  Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure.
+            </p>
+        </div>
         <div class="donate-container">
             <div class="card-taka">100 Taka</div>
             <div class="card-taka">200 Taka</div>
