--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
                 <h3>Bangladesh 2.0</h3>
             </div>
             <div>
-                <button class="boss"> sign in </button>
-                <!-- <button class="all-font "><a href="">Sign In</a></button> -->
+                <button class="boss"> Sign in </button>
+                
             </div>
         </section>
     </nav>
